\name{NEWS}
\title{News for Package \pkg{finbif}}

\section{finbif version 0.6.1}{
  \subsection{BUG FIXES}{
    \itemize{
      \item Fixed a regression in the last release that prevented collection
        names being converted from their URIs.
    }
  }
}

\section{finbif version 0.6.0}{
  \subsection{NEW FEATURES}{
    \itemize{
      \item New variables \code{lat_euref} and \code{lon_euref} available for
        occurrence record downloads. These new variables represent the central
        point of a bounding box encompassing a record's geographic coverage in
        the EUREF (ETRS89/ETRS-TM35FIN) coordinate system.
      \item Option now available to retain the TSV data file when loading FinBIF
        occurrence data with \code{finbif_occurrence_load} from ZIP archive or
        online reference.
      \item Option now available to extract "facts" when using
        \code{finbif_occurrence_load} to import records from a ZIP archive. The
        user must supply a named list, where the names refer to one or more fact
        types: "record", "event" and/or "document", and the list elements
        are character vectors indicating which "facts" to extract.
      \item "Lite" download files (occurrence record datasets of less than
        10,000 records downloaded directly from laji.fi) can now be imported
        using \code{finbif_occurrence_load}.
      \item New filters (currently undocumented) \code{ely_center_id} and
        \code{region_id} are available for \code{finbif_occurrence}.
      \item New function, \code{from_schema}, to convert variable names from
        FinBIF schema to other styles.
      \item New computed variable \code{date_time_ISO8601} (currently
        undocumented) can be selected when creating \code{finbif_occ} objects.
      \item New computed variable \code{epsg} (currently undocumented). If
        selected, the column will have the EPSG code of the first column that
        contains geographic data.
    }
  }