@@ -79,7 +79,7 @@
       </button>
       <span class="navbar-brand">
         <a class="navbar-link" href="../index.html">finbif</a>
-        <span class="version label label-default" data-toggle="tooltip" data-placement="bottom" title="Released version">0.6.1</span>
+        <span class="version label label-default" data-toggle="tooltip" data-placement="bottom" title="Released version">0.6.1.9000</span>
       </span>
     </div>
 
@@ -88,7 +88,7 @@
         <li>
   <a href="../index.html">
     <span class="fas fa-home fa-lg"></span>
-
+     
   </a>
 </li>
 <li>
@@ -100,7 +100,7 @@
 <li class="dropdown">
   <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">
     Articles
-
+     
     <span class="caret"></span>
   </a>
   <ul class="dropdown-menu" role="menu">
@@ -129,16 +129,16 @@
         <li>
   <a href="https://github.com/luomus/finbif/">
     <span class="fab fa-github fa-lg"></span>
-
+     
   </a>
 </li>
       </ul>
-
+      
     </div><!--/.nav-collapse -->
   </div><!--/.container -->
 </div><!--/.navbar -->
 
-
+      
 
       </header>
 
@@ -151,7 +151,7 @@
 
     <div id="finbif-061" class="section level1">
 <h1 class="page-header" data-toc-text="0.6.1">
-<a href="#finbif-061" class="anchor"></a>finbif 0.6.1<small> 2021-07-26 </small>
+<a href="#finbif-061" class="anchor"></a>finbif 0.6.1<small> Unreleased </small>
 </h1>
 <div id="bug-fixes" class="section level4">
 <h4 class="hasAnchor">
@@ -384,7 +384,7 @@
       </footer>
    </div>
 
-
+  
 
 
   </body>
